log/build_2025-02-18_13-36-59/rrt_package/stderr.log
  File "/home/shibin/ros2_ws/install/rrt_package/lib/python3.10/site-packages/rrt_package/mynode3.py", line 556
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

